--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,65 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# =============================================================================
+# Digital Life Narrative AI - Project Specific
+# =============================================================================
+
+# -----------------------------------------------------------------------------
+# IDE / Editor Settings
+# -----------------------------------------------------------------------------
+# JetBrains (PyCharm, IntelliJ)
+.idea/
+
+# Visual Studio Code
+.vscode/
+
+# Vim swap files
+*.swp
+*.swo
+
+# -----------------------------------------------------------------------------
+# Operating System Files
+# -----------------------------------------------------------------------------
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# -----------------------------------------------------------------------------
+# Sensitive Configuration & Credentials
+# -----------------------------------------------------------------------------
+# User-specific configuration (may contain paths, API settings)
+config.yaml
+config.yml
+
+# Additional environment files
+.env.local
+.env.*.local
+
+# Encryption keys - NEVER commit these
+*.key
+*.pem
+
+# Encrypted credentials file
+credentials.enc
+
+# -----------------------------------------------------------------------------
+# Generated Output
+# -----------------------------------------------------------------------------
+# Generated HTML reports, narratives, and reconstructed life stories
+/output/
+
+# User-provided test export data (Snapchat, Google Photos, Facebook dumps)
+/test_exports/
+
+# Temporary processing files
+/temp/
+/tmp/
+
