feat: Add quickstart guide for judges, a comprehensive user guide, and a demo script, along with updates to .env.example and README.md.

--- a/.env.example
+++ b/.env.example
@@ -16,20 +16,20 @@
 # -----------------------------------------------------------------------------
 # Gemini API Key (REQUIRED for AI features)
 # -----------------------------------------------------------------------------
-# FOR HACKATHON JUDGES: A shared API key is provided below for evaluation.
-# This key is specifically for testing and reviewing this project.
+# FOR HACKATHON JUDGES: You will receive the API key separately via email/Slack.
+# Simply paste it below after the equals sign.
 #
-# For your own use after the hackathon:
-# - Get your personal key from: https://aistudio.google.com/app/apikey
-# - Replace the key below with your own
+# For personal use after the hackathon:
+# - Get your own key from: https://aistudio.google.com/app/apikey
+# - Replace with your personal key
 # 
 # Format: AIza... (starts with "AIza" followed by alphanumeric characters)
 # 
 # Without this key, the application runs in "statistics-only mode" with
 # no AI narratives, chapter detection, or semantic analysis.
 #
-# SHARED EVALUATION KEY (for hackathon judges):
-GEMINI_API_KEY=AIzaSyCezXkLMSQ0bXFUCMxZqVTvUXafxPQRVxc
+# Add your key here:
+GEMINI_API_KEY=
 
 # -----------------------------------------------------------------------------
 # Optional: Model Selection
